--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -66,39 +66,7 @@
     "You can view the usefulness of this from two perspectives:\n",
     "\n",
     "1. For a fixed budget of Trotter steps that you can execute, you can obtain results with a Trotter error that is smaller in total.\n",
-    "2. Given some target number of Trotter steps that is too large to execute, you can use the MPF to find a collection of lower-depth circuits to run that results in a similar Trotter error.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "<!--\n",
-    "\n",
-    "in the limit $t \\rightarrow 0$ the p-order PF is:\n",
-    "\n",
-    "$$S(t)=\\prod_{a=1}^d e^{-i t F_a}=e^{-i t H}+O\\left(t^{p+1}\\right)$$\n",
-    "\n",
-    "is the order-p product formula in the limit $t \\rightarrow 0$.\n",
-    "\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\mu(t) = \\sum_{j} x_j \\rho^{k_j}_{j}\\left(\\frac{t}{k_j}\\right) + \\text{some remaining Trotter error} \\, ,\n",
-    "$$\n",
-    "\n",
-    "where $x_j$ are our weighting coefficients, $\\rho^{k_j}_j$ is the density matrix corresponding to the pure state obtained by evolving the initial state with the product formula, $S^{k_j}$, involving $k_j$ Trotter steps, and $j$ indexes the number of PFs that make up the MPF. All the terms in $\\mu(t)$ use the same product formula $S(t)$ as its base.\n",
-    "The goal is to improve upon ||$\\rho_k(t)-\\rho(t) \\|$ by finding $\\mu(t)$ with even lower $\\|\\mu(t)-\\rho(t)\\|$.\n",
-    "\n",
-    "*   $\\mu(t)$ needs not be a physical state as $x_i$ need not be positive. The goal here is to minimize the error in the expectation value of the observables and not to find a physical replacement for $\\rho(t)$.\n",
-    "*   $k_j$ determines both the circuit depth and level of Trotter approximation. Smaller values of $k_j$ lead to shorter circuits, which incur fewer circuit errors but will be a less accurate approximation to the desired state.\n",
-    "\n",
-    "\n",
-    "The key here is that the remaining Trotter error given by $\\mu(t)$ is smaller than the Trotter error that one would obtain by simply using the largest $k_j$ value.\n",
-    "\n",
-    "You can view the usefulness of this from two perspectives:\n",
-    "\n",
-    "1. For a fixed budget of Trotter steps that you are able to execute, you can obtain results with a Trotter error that is smaller in total.\n",
-    "2. Given some target number of Trotter steps that is too large to execute, you can use the MPF to find a shorter-depth circuit to run that results in a similar Trotter error.\n",
-    " -->"
+    "2. Given some target number of Trotter steps that is too large to execute, you can use the MPF to find a collection of lower-depth circuits to run that results in a similar Trotter error."
    ]
   },
   {
@@ -511,36 +479,7 @@
     "\n",
     "We can find a solution for $x$ analytically as $x = A^{-1}b$; see for example Refs. [\\[1\\]](#references) or [\\[2\\]](#references).\n",
     "However, this exact solution can be _\"ill-conditioned\"_ resulting in very large L1-norms of our coefficients, $x$, which can lead to bad performance of the MPF.\n",
-    "Instead, one can also obtain an approximate solution that minimizes the L1-norm of $x$ in order to attempt to optimize the MPF behavior.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "<!--\n",
-    "_Static_ MPFs are those where the $x_j$ values do **NOT** depend on the evolution time, $t$. Let's see some details of the static coefficients. First, define $\\operatorname{Ad}_X(Y)=X Y-Y X$ and set\n",
-    "\n",
-    "$$\n",
-    "\\begin{aligned}\n",
-    "& \\alpha_{\\text {comm }}\\left(p ; A_1, \\ldots, A_s ; B\\right) \\\\\n",
-    "& \\quad=\\sum_{\\substack{q_1, \\ldots, q_s \\geq 0 \\\\\n",
-    "q_1+\\ldots+q_s=p}} \\frac{p !}{q_{1} ! \\cdots q_{s} !}\\left\\|\\left(\\operatorname{Ad}_{A_1}\\right)^{q_1} \\cdots\\left(\\operatorname{Ad}_{A_s}\\right)^{q_s}(B)\\right\\|\n",
-    "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "Theorem (Zhuk et al., 2023):\n",
-    "Set $\\mu_p(t)=\\sum_{j=1}^r x_j \\rho^{k_j}_j(t)$. There exists coefficients $x_j$ minimizing\n",
-    "$\\kappa=\\left|x_1\\right|+\\cdots+\\left|x_r\\right| \\text{ s.t. } \\sum_{j=1}^r x_j=1 \\text{ and } \\sum_{j=1}^r \\frac{x_j}{k_j^q}=0 \\text{ for } q \\in\\{p, \\ldots, 2 p-1\\} \\text{ and for all } t \\geq 0.$\n",
-    "This gives us\n",
-    "\n",
-    "$$\n",
-    "\\left\\|\\mu_p(t)-\\rho(t)\\right\\|_1 \\leq\\left(\\sum_{j=1}^r \\frac{\\left|x_j\\right|}{k_j^{2 p}}\\right)\\left(a_1 t^{2 p+2}+a_2 t^{2 p+1}+a_3 t^{2 p}\\right),\n",
-    "$$\n",
-    "\n",
-    "for $a_{1,2,3} \\geq 0$ which depend only on the order of commutators of $F_1 \\ldots F_d$, order $p$ and final time $t$. In the limit $t \\rightarrow \\infty$\n",
-    "\n",
-    "$$\n",
-    "\\|\\mu(t)-\\rho(t)\\|_1 \\leq\\left(\\sum_{j=1}^r \\frac{\\left|x_j\\right|}{k_j^{2 p}}\\right) a_1 t^{2 p+2}[1+O(1 / t)]\n",
-    "$$ -->"
+    "Instead, one can also obtain an approximate solution that minimizes the L1-norm of $x$ in order to attempt to optimize the MPF behavior."
    ]
   },
   {
