reorganize into captions

--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -265,17 +265,11 @@ To define a custom operation, enter it in the OpenQASM code editor using this fo
 
 Once you have defined your custom operation, drag it onto the graphical editor and use the edit icon to fine-tune the parameters.
 
-a) The gates to be included in the custom operation:
-
-![Gates in the custom operation](/docs/images/guides/composer/763d3b42-4b6e-4409-817f-7d15abae2d76.avif)
-
-b) The code for the new operation:
-
-![Customized new operation](/docs/images/guides/composer/db5856ca-751c-4f12-9f25-6060b9003687.avif)
-
-c) The new operation in the graphical editor:
-
-![New operation](/docs/images/guides/composer/d7fb8ec5-5eae-4ad4-9972-1e3665b39b7f.avif)
+| Example of a custom operation | |
+| --- | --- |
+| The gates to be included in the custom operation: | ![Gates in the custom operation](/docs/images/guides/composer/763d3b42-4b6e-4409-817f-7d15abae2d76.avif)|
+| The code for the new operation: | ![Customized new operation](/docs/images/guides/composer/db5856ca-751c-4f12-9f25-6060b9003687.avif) | 
+| The new operation in the graphical editor: | ![New operation](/docs/images/guides/composer/d7fb8ec5-5eae-4ad4-9972-1e3665b39b7f.avif) |
 
 ### 4. Inspect your circuit, step-by-step
 
@@ -289,9 +283,7 @@ Inspect mode de-mystifies the inner workings of the circuits you create. It step
 
 * To move step-by-step through visualizations of your circuit’s components, use the forward and rewind buttons.
 
-![Controls to step forward and backward, and to jump to a circuit's beginning or end.](/docs/images/guides/composer/5f2dfb7c-a244-405c-8950-f422a4408fcf.avif)
-
-Inspect mode controls, in order: jump to the beginning of a circuit, step backward, play from one break point to the next, step forward, jump to the end of a circuit.
+![Controls to step forward and backward, and to jump to a circuit's beginning or end.](/docs/images/guides/composer/5f2dfb7c-a244-405c-8950-f422a4408fcf.avif "Inspect mode controls, in order: jump to the beginning of a circuit, step backward, play from one break point to the next, step forward, jump to the end of a circuit.")
 
 * To inspect only some operations, click the operations you want to be inspected, and a colored overlay appears over each that indicates they will be included when you run in Inspect mode. To unselect an operation, click on it again, and the overlay disappears.
 
@@ -376,9 +368,7 @@ The quantum phase of the qubit state is given by the line that extends from the 
 
 **Example: phase disks for two different qubits**
 
-![phase disk examples](/docs/images/guides/composer/0207fba8-8b4b-4611-9638-6cbe169e10c4.avif)
-
-Two examples of the phase disk visualization. The first example is a $|1\rangle$ state and the second shows the $(|0\rangle-|1\rangle)/\sqrt{2}$ state with a nonzero relative phase.
+![phase disk examples](/docs/images/guides/composer/0207fba8-8b4b-4611-9638-6cbe169e10c4.avif "Two examples of the phase disk visualization. The first example is a $|1\rangle$ state and the second shows the $(|0\rangle-|1\rangle)/\sqrt{2}$ state with a nonzero relative phase.")
 
 **Connection to the Bloch sphere**
 
@@ -408,13 +398,9 @@ This view visualizes the probabilities of the quantum state as a bar graph. The 
 
 Consider the following quantum circuit and its probabilities view:
 
-![a quantum circuit](/docs/images/guides/composer/58f83286-9707-4e43-893e-2bd161c744cd.avif)
+![a quantum circuit](/docs/images/guides/composer/58f83286-9707-4e43-893e-2bd161c744cd.avif "A circuit consisting of a column of Hadamards that creates an equal superposition of the computational basis states, followed by a two-qubit controlled-Z (CZ) gate.")
 
-A circuit consisting of a column of Hadamards that creates an equal superposition of the computational basis states, followed by a two-qubit controlled-Z (CZ) gate.
-
-![measurement probabilities view](/docs/images/guides/composer/4d79349d-dadd-4e9c-8571-4617601d22f3.avif)
-
-A quantum circuit and its probabilities view.
+![measurement probabilities view](/docs/images/guides/composer/4d79349d-dadd-4e9c-8571-4617601d22f3.avif "A quantum circuit and its probabilities view.")
 
 The circuit puts the two qubits into the state $|\psi\rangle = (|00\rangle + |01\rangle+ |10\rangle-|11\rangle) / 2.$ The computational basis states are $|00\rangle, |10\rangle, |01\rangle,$ and $|11\rangle.$ The probabilities for each of the computational states is 1/4.
 
@@ -426,13 +412,11 @@ The q-sphere represents the state of a system of one or more qubits by associati
 
 The nodes are laid out on the q-sphere so that the basis state with all zeros (e.g., $|000\rangle)$ is at its north pole, and the basis state with all ones (e.g., $|111\rangle$) is at its south pole. Basis states with the same number of zeros (or ones) lie on a shared latitude of the q-sphere (e.g., $|001\rangle, |010\rangle, |100\rangle$). Beginning at the north pole of the q-sphere and progressing southward, each successive latitude has basis states with a greater number of ones; the latitude of a basis state is determined by its [Hamming distance](https://en.wikipedia.org/wiki/Hamming_distance) from the zero state. The q-sphere contains complete information about the quantum state in a compact representation.
 
-Consider the following quantum circuit and its q-sphere:
+Consider the following quantum circuit and its q-sphere, which represent the state the circuit creates:
 
 ![a quantum circuit](/docs/images/guides/composer/58f83286-9707-4e43-893e-2bd161c744cd.avif)
 
 ![q-sphere view](/docs/images/guides/composer/55d58744-c95c-44b3-ba29-3c7e24ec4dcc.avif)
-
-A quantum circuit and the q-sphere representing the state the circuit creates.
 
 You can select, hold, and drag to rotate the q-sphere. To return the q-sphere to its default orientation, select the **rewind-arrow button** to the top right of the q-sphere.
 
@@ -450,9 +434,7 @@ Consider the following quantum circuit and its statevector view:
 
 ![a quantum circuit](/docs/images/guides/composer/58f83286-9707-4e43-893e-2bd161c744cd.avif)
 
-![statevector view](/docs/images/guides/composer/1f828b26-e332-4ef2-b8f0-649030fabab4.avif)
-
-The statevector at the terminus of the above circuit. The color wheel maps phase angle to color. The output state is expressed as a list of complex numbers.
+![statevector view](/docs/images/guides/composer/1f828b26-e332-4ef2-b8f0-649030fabab4.avif "The statevector at the terminus of the above circuit. The color wheel maps phase angle to color. The output state is expressed as a list of complex numbers.")
 
 The circuit puts the two qubits into the state $|\psi\rangle = (|00\rangle + |01\rangle+ |10\rangle-|11\rangle) / 2$. The computational basis states are $|00\rangle$, $|10\rangle$, $|01\rangle$, and $|11\rangle$. The magnitudes of the amplitudes are $1/2$, and the quantum phases with respect to the ground state are $0$ for $|01\rangle$ and $|10\rangle$, and $\pi$ for $|11\rangle$.
 
