bring in new images

--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -29,7 +29,7 @@ Instead of writing code by hand, automatically generate OpenQASM or Python code 
 
 IBM Quantum Composer has a customizable set of tools that allow you to build, visualize, and run quantum circuits on quantum processing units (QPUs). Use the "More options" menu on each window to access additional tools and actions.
 
-![IBM Quantum Composer window.](/docs/images/guides/composer/Learning_Composer-Annotated.svg)
+![IBM Quantum Composer window.](/docs/images/guides/composer/composer-annotation.svg)
 
 1. **Operations catalog** - These are the building blocks of quantum circuits. Drag and drop these gates and other operations onto the graphical circuit editor. Different types of gates are grouped together by color. For example, classical gates are dark blue, phase gates are light blue, and non-unitary operations are grey.
 
@@ -308,7 +308,7 @@ Next, you can set the number of shots (executions) of your circuit that the back
 You can optionally name the job and add tags in this panel as well. This will not change the name of the circuit. A pre-populated "Composer" tag makes it easier to filter your Workloads table by Composer jobs. You can remove this tag.
 
 
-![Window displaying job options.](/docs/images/guides/composer/Learning_Run.svg)
+![Window displaying job options.](/docs/images/guides/composer/composer-run.svg)
 
 <Admonition type="note">
 When you run a circuit, it is automatically sent to the least-busy QPU, unless you specify a QPU in the Run settings. If you run the same circuit again, the QPU selection window will default to your previous choice.
@@ -368,7 +368,9 @@ The quantum phase of the qubit state is given by the line that extends from the 
 
 **Example: phase disks for two different qubits**
 
-![phase disk examples](/docs/images/guides/composer/0207fba8-8b4b-4611-9638-6cbe169e10c4.avif "Two examples of the phase disk visualization. The first example is a $|1\rangle$ state and the second shows the $(|0\rangle-|1\rangle)/\sqrt{2}$ state with a nonzero relative phase.")
+![phase disk examples](/docs/images/guides/composer/0207fba8-8b4b-4611-9638-6cbe169e10c4.avif)
+
+Two examples of the phase disk visualization. The first example is a $|1\rangle$ state and the second shows the $(|0\rangle-|1\rangle)/\sqrt{2}$ state with a nonzero relative phase.
 
 **Connection to the Bloch sphere**
 
