fix transpiler stages notebook

--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -437,7 +437,7 @@
     ")\n",
     "\n",
     "\n",
-    "circ = pass_manager.run(ghz, backend)\n",
+    "circ = pass_manager.run(ghz)\n",
     "circ.draw(output=\"mpl\", idle_wires=False)"
    ]
   },
