update guide title

--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -1,11 +1,11 @@
 ---
-title: Explore gates and circuits with IBM Quantum Composer
+title: IBM Quantum Composer
 description: IBM Quantum Composer is a graphical programming tool. Drag and drop operations to build circuits and run them on quantum hardware.
 platform: cloud
 ---
 
 {/* cspell:ignore gatename, ungroup, ungrouping */}
-# Explore gates and circuits with IBM Quantum Composer
+# IBM Quantum Composer
 
 ## What is it?
 
