--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -52,6 +52,34 @@ Follow the steps in the appropriate topic, depending on the ID provider you chos
 * [Use an ID provider other than IBM Cloud for users that do not have IBM Cloud accounts](/docs/guides/manage-appid#id-provider)
 * [Invite users and manage their access](/docs/guides/invite-and-manage-users)
 
+<span id="firewall"></span>
+## 6. Configure your firewall
+
+To configure your firewall to enable access to the IBM Quantum API endpoints, add the following URLs to your allowlist:
+
+- IBM Cloud global services:
+    ```text
+    cloud.ibm.com
+    iam.cloud.ibm.com
+    api.global-search-tagging.cloud.ibm.com
+    globalcatalog.cloud.ibm.com
+    resource-controller.cloud.ibm.com
+    ```
+- IBM Quantum Qiskit Runtime services - region us-east:
+    ```text
+    quantum.cloud.ibm.com
+    s3.us-east.cloud-object-storage.appdomain.cloud
+    ```
+- IBM Quantum Qiskit Runtime services - region eu-de:
+    ```text
+    eu-de.quantum.cloud.ibm.com
+    s3.direct.eu-de.cloud-object-storage.appdomain.cloud
+    ```
+- IBM Quantum Qiskit Functions preview service:
+    ```text
+    qiskit-serverless.quantum.ibm.com
+    ```
+
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
