update index page

--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -51,4 +51,4 @@ The output of this step in a Qiskit pattern is normally a collection of circuits
   * [OpenQASM 3.x live specification](https://openqasm.com/)
 * [MPF Qiskit addon](/docs/guides/qiskit-addons-mpf)
   * [Get started with MPF](/docs/guides/qiskit-addons-mpf-get-started)
-* [Explore gates and circuits with IBM Quantum Composer](/docs/guides/composer)
+* [IBM Quantum Composer](/docs/guides/composer)
