replace old links to composer docs

--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -454,7 +454,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "  -  See an example of circuit visualization in the [Grover's Algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.\n",
-    "  -  Visualize simple circuits in the [Explore gates and circuits with the Quantum Composer](https://learning.quantum.ibm.com/tutorial/explore-gates-and-circuits-with-the-quantum-composer) tutorial.\n",
+    "  -  Visualize simple circuits using [IBM Quantum Composer](/docs/guides/composer).\n",
     "  -  Review the [Qiskit visualizations API documentation](/docs/api/qiskit/visualization).\n",
     "</Admonition>"
    ]
