--- a/docs/guides/interoperate-qiskit-qasm3.ipynb
+++ b/docs/guides/interoperate-qiskit-qasm3.ipynb
@@ -198,7 +198,7 @@
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
-    "    - Learn how to generate OpenQASM code in the [Explore gates and circuits with the Quantum Composer](https://learning.quantum.ibm.com/tutorial/explore-gates-and-circuits-with-the-quantum-composer) tutorial.\n",
+    "    - Learn how to generate OpenQASM code using [IBM Quantum Composer](/docs/guides/composer).\n",
     "    - Review the [OpenQASM 3 Qiskit API](/docs/api/qiskit/qasm3) reference.\n",
     "    - Visit the [Verify your program](./debugging-tools) topic.\n",
     "    - Review the [OpenQASM Live Specification](https://openqasm.com/).\n",
