--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -18,22 +18,22 @@
     "*Estimated QPU usage: 4 minutes on IBM Marrakesh (NOTE: This is an estimate only. Your runtime may vary.)*\n",
     "\n",
     "## Background\n",
-    "In this tutorial, you will learn how to use a **Multi-Product Formula (MPF)** to achieve a lower Trotter error on our observable compared to the one incurred by the deepest Trotter circuit that we will actually execute.\n",
+    "In this tutorial, you will learn how to use a Multi-Product Formula (MPF) to achieve a lower Trotter error on our observable compared to the one incurred by the deepest Trotter circuit that we will actually execute.\n",
     "MPFs reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions. Consider the task of finding observable expectation values for the quantum state\n",
     "$\\rho(t)=e^{-i H t} \\rho(0) e^{i H t}$ with the Hamiltonian $H$. One can use Product Formulas (PFs) to approximate the time-evolution $e^{-i H t}$ by doing the following:\n",
     "\n",
     "- Write the Hamiltonian $H$ as $H=\\sum_{a=1}^d F_a,$ where $F_a$ are Hermitian operators such that each corresponding unitary can be efficiently implemented on a quantum device.\n",
-    "- Approximate the terms $F_a$ that do not commute with each other\n",
+    "- Approximate the terms $F_a$ that do not commute with each other.\n",
     "\n",
-    "Then, the $1^{st}$ order PF (Lie-Trotter formula) is:\n",
+    "Then, the first-order PF (Lie-Trotter formula) is:\n",
     "\n",
-    "$$S_1(t):=\\prod_{a=1}^d e^{-i F_a t}$$\n",
+    "$$S_1(t):=\\prod_{a=1}^d e^{-i F_a t},$$\n",
     "\n",
     "which has a quadratic error term $S_1(t)=e^{-i H t}+\\mathcal{O}\\left(t^{2}\\right)$. One can also use higher-order PFs (Lie-Trotter-Suzuki formulas), which converge faster, and are defined recursively as:\n",
     "\n",
     "$$S_2(t):=\\prod_{a=1}^d e^{-i F_a t/2}\\prod_{a=1}^d e^{-i F_a t/2}$$\n",
     "\n",
-    "$$S_{2 \\chi}(t):= S_{2 \\chi -2}(s_{\\chi}t)^2 S_{2 \\chi -2}((1-4s_{\\chi})t)S_{2 \\chi -2}(s_{\\chi}t)^2$$\n",
+    "$$S_{2 \\chi}(t):= S_{2 \\chi -2}(s_{\\chi}t)^2 S_{2 \\chi -2}((1-4s_{\\chi})t)S_{2 \\chi -2}(s_{\\chi}t)^2,$$\n",
     "\n",
     "where $\\chi$ is the order of the symmetric PF and $s_p = \\left( 4 - 4^{1/(2p-1)} \\right)^{-1}$. For long time-evolutions, one can split the time interval $t$ into $k$ intervals, called Trotter steps, of duration $t/k$ and approximate the time-evolution in each interval with a $\\chi$ order product formula $S_{\\chi}$. Thus, the PF of order $\\chi$ for time-evolution operator over $k$ Trotter steps is:\n",
     "\n",
@@ -415,7 +415,7 @@
    "source": [
     "#### Static MPF coefficients\n",
     "\n",
-    "_Static_ MPFs are those where the $x_j$ values do **NOT** depend on the evolution time, $t$. Let's consider the order $\\chi = 1$ PF with $k_j$ Trotter steps, this can be written as:\n",
+    "Static MPFs are those where the $x_j$ values do not depend on the evolution time, $t$. Let's consider the order $\\chi = 1$ PF with $k_j$ Trotter steps, this can be written as:\n",
     "\n",
     "$$ S_1^{k_j}\\left( \\frac{t}{k_j} \\right)=e^{-i H t}+ \\sum_{n=1}^{\\infty} A_n \\frac{t^{n+1}}{k_j^n}  $$\n",
     "\n",
@@ -478,7 +478,7 @@
     "For more details, refer to the documentation of Linear System of Equations ([LSE.](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.LSE.html))\n",
     "\n",
     "We can find a solution for $x$ analytically as $x = A^{-1}b$; see for example Refs. [\\[1\\]](#references) or [\\[2\\]](#references).\n",
-    "However, this exact solution can be _\"ill-conditioned\"_ resulting in very large L1-norms of our coefficients, $x$, which can lead to bad performance of the MPF.\n",
+    "However, this exact solution can be \"ill-conditioned\", resulting in very large L1-norms of our coefficients, $x$, which can lead to bad performance of the MPF.\n",
     "Instead, one can also obtain an approximate solution that minimizes the L1-norm of $x$ in order to attempt to optimize the MPF behavior."
    ]
   },
@@ -635,7 +635,7 @@
    "source": [
     "##### Optimize for $x$ using an exact model\n",
     "\n",
-    "Alternatively to computing $x=A^{-1}b$, you can also use [setup_exact_model](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.setup_exact_model.html) to construct a [cvxpy.Problem](https://www.cvxpy.org/api_reference/cvxpy.problems.html#cvxpy.Problem) instance which uses the LSE as constraints and whose optimal solution will yield $x$.\n",
+    "Alternatively to computing $x=A^{-1}b$, you can also use [setup_exact_model](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.setup_exact_model.html) to construct a [cvxpy.Problem](https://www.cvxpy.org/api_reference/cvxpy.problems.html#cvxpy.Problem) instance that uses the LSE as constraints and whose optimal solution will yield $x$.\n",
     "\n",
     "In the next section, it will be clear why this interface exists."
    ]
@@ -701,7 +701,7 @@
     "It might happen that the L1 norm for the chosen set of $k_j$ values is deemed too high.\n",
     "If that is the case and you cannot choose a different set of $k_j$ values, you can use an approximate solution to the LSE instead of an exact one.\n",
     "\n",
-    "To do so, simply use [setup_approximate_model](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.setup_approximate_model.html) to construct a different [cvxpy.Problem](https://www.cvxpy.org/api_reference/cvxpy.problems.html#cvxpy.Problem) instance which constrains the L1-norm to a chosen threshold while minimizing the difference of $Ax$ and $b$."
+    "To do so, simply use [setup_approximate_model](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.setup_approximate_model.html) to construct a different [cvxpy.Problem](https://www.cvxpy.org/api_reference/cvxpy.problems.html#cvxpy.Problem) instance, which constrains the L1-norm to a chosen threshold while minimizing the difference of $Ax$ and $b$."
    ]
   },
   {
@@ -749,9 +749,9 @@
    "source": [
     "#### Dynamic MPF coefficients\n",
     "\n",
-    "In the previous section, we introduced a *static* MPF that improves on the standard Trotter approximation. However, this *static* version does **not** necessarily minimize the approximation error. Concretely, the static MPF, denoted $\\mu^S(t)$, is *not* the optimal projection of $\\rho(t)$ onto the subspace spanned by the product-formula states $\\{\\rho_{k_i}(t)\\}_{i=1}^r$.\n",
+    "In the previous section, we introduced a static MPF that improves on the standard Trotter approximation. However, this static version does not necessarily minimize the approximation error. Concretely, the static MPF, denoted $\\mu^S(t)$, is not the optimal projection of $\\rho(t)$ onto the subspace spanned by the product-formula states $\\{\\rho_{k_i}(t)\\}_{i=1}^r$.\n",
     "\n",
-    "To address this, we consider a *dynamic* MPF (introduced in Ref. [\\[2\\]](#references) and experimentally demonstrated in Ref. [\\[3\\]](#references)) that **does** minimize the approximation error in the Frobenius norm. Formally, we focus on minimizing\n",
+    "To address this, we consider a dynamic MPF (introduced in Ref. [\\[2\\]](#references) and experimentally demonstrated in Ref. [\\[3\\]](#references)) that does minimize the approximation error in the Frobenius norm. Formally, we focus on minimizing\n",
     "\n",
     "$$\n",
     "\\|\\rho(t) - \\mu^D(t)\\|_F^2 \\;=\\; \\mathrm{Tr}\\bigl[ \\left( \\rho(t) - \\mu^D(t)\\right)^2 \\bigr],\n",
@@ -788,7 +788,7 @@
     "L_i^{\\mathrm{exact}}(t) = \\mathrm{Tr}[\\rho(t)\\,\\rho_{k_i}(t)]\n",
     "$$\n",
     "\n",
-    "represents the overlap between the *exact* state $\\rho(t)$ and each product-formula approximation $\\rho_{k_i}(t)$. In practical scenarios, these overlaps may only be measured approximately due to noise or partial access to $\\rho(t)$.\n",
+    "represents the overlap between the exact state $\\rho(t)$ and each product-formula approximation $\\rho_{k_i}(t)$. In practical scenarios, these overlaps may only be measured approximately due to noise or partial access to $\\rho(t)$.\n",
     "\n",
     "Here, $\\lvert\\psi_{\\mathrm{in}}\\rangle$ is the initial state, and $S(\\cdot)$ is the operation applied in the product formula. By choosing the coefficients $x_i(t)$ that minimize this expression (and handling approximate overlap data when $\\rho(t)$ is not fully known), we obtain the “best” (in a Frobenius-norm sense) dynamic approximation of $\\rho(t)$ within the MPF subspace. The quantities $L_i(t)$ and $M_{i,j}(t)$ can be calculated efficiently using tensor network methods [\\[3\\]](#references). The MPF Qiskit addon provides several \"backends\" to carry out the calculation. The example below shows the most flexible way to do so, and the [TeNPy layer-based backend](https://qiskit.github.io/qiskit-addon-mpf/apidocs/qiskit_addon_mpf.backends.tenpy_layers.html#module-qiskit_addon_mpf.backends.tenpy_layers) docs also explain in great detail. To use this method, start from the circuit implementing the desired time-evolution and create models that represent these operations from the layers of the corresponding circuit. Finally, an `Evolver` object is created that can be used to generate the time-evolved quantities $M_{i,j}(t)$ and $L_i(t)$. We start by creating the  `Evolver` object corresponding to the approximate time-evolution ([`ApproxEvolverFactory`](https://qiskit.github.io/qiskit-addon-mpf/apidocs/qiskit_addon_mpf.dynamic.html#qiskit_addon_mpf.dynamic.ApproxEvolverFactory)) implemented by the circuits. In particular, pay extra attention to the `order` variable so that they match. Note that in generating the circuits corresponding to the approximate time-evolution, we use placeholder values for the `time = 1.0` and the number of Trotter steps (`reps=1`). The correct approximating circuits are then produced by the dynamic problem solver in `setup_dynamic_lse`."
    ]
@@ -841,7 +841,7 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"warning\">\n",
-    "The options of LayerwiseEvolver that determine the details of the tensor network simulation must be chosen carefully to avoid setting up an ill-defined optimization problem.\n",
+    "The options of `LayerwiseEvolver` that determine the details of the tensor network simulation must be chosen carefully to avoid setting up an ill-defined optimization problem.\n",
     "</Admonition>"
    ]
   },
@@ -916,7 +916,7 @@
    "id": "057d479e",
    "metadata": {},
    "source": [
-    "For each time step $t$ we set up the dynamic linear system of equation with the [`setup_dynamic_lse`](https://qiskit.github.io/qiskit-addon-mpf/apidocs/qiskit_addon_mpf.dynamic.html) method. The corresponding object contains the information about the dynamic MPF problem: `lse.A` gives the Gram Matrix $M$ while `lse.b` gives the overlap $L$. We can then solve the LSE (when not ill-defined) to find the dynamic coefficients using the `setup_frobenius_problem`. It is important to note the difference with the static coefficients, which only depend on the detilas of the product formula used and are independent of the details of the time-evolution (Hamiltonian and initial state)."
+    "For each time step $t$ we set up the dynamic linear system of equations with the [`setup_dynamic_lse`](https://qiskit.github.io/qiskit-addon-mpf/apidocs/qiskit_addon_mpf.dynamic.html) method. The corresponding object contains the information about the dynamic MPF problem: `lse.A` gives the Gram matrix $M$ while `lse.b` gives the overlap $L$. We can then solve the LSE (when not ill-defined) to find the dynamic coefficients using the `setup_frobenius_problem`. It is important to note the difference with the static coefficients, which only depend on the details of the product formula used and are independent of the details of the time-evolution (Hamiltonian and initial state)."
    ]
   },
   {
@@ -984,7 +984,7 @@
    "id": "bf4a82e0",
    "metadata": {},
    "source": [
-    "Finally plot these expectation values throughout the evolution time"
+    "Finally, plot these expectation values throughout the evolution time."
    ]
   },
   {
