--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -1141,7 +1141,7 @@
    "metadata": {},
    "source": [
     "### Step 1: Map classical inputs to a quantum problem\n",
-    "Let's now consider a single time $t=1.0$ and calculate the expectation value of the magnetization with the various methods using one a QPU. The particular choice of $t$ was done so to maximize the difference between the various methods and observe their relative efficacy. To determine the window of time for which dynamic MPF is guaranteed to produce observables with lower error than any of the individual Trotter formulas within the multi-product, one can implement the “MPF test” - see equation (17) and surrounding text in [\\[3\\]](#references)."
+    "Let's now consider a single time $t=1.0$ and calculate the expectation value of the magnetization with the various methods using one QPU. The particular choice of $t$ was done so to maximize the difference between the various methods and observe their relative efficacy. To determine the window of time for which dynamic MPF is guaranteed to produce observables with lower error than any of the individual Trotter formulas within the multi-product, we can implement the “MPF test” - see equation (17) and surrounding text in [\\[3\\]](#references)."
    ]
   },
   {
@@ -1152,7 +1152,7 @@
     "### Setting up the Trotter circuits\n",
     "\n",
     "At this point, we have found our expansion coefficients, $x$, and all that is left to do is to generate the Trotterized quantum circuits.\n",
-    "Once again, the [qiskit_addon_utils.problem_generators](https://qiskit.github.io/qiskit-addon-utils/stubs/qiskit_addon_utils.problem_generators.html) module comes to the rescue with a handy function do just that:"
+    "Once again, the [qiskit_addon_utils.problem_generators](https://qiskit.github.io/qiskit-addon-utils/stubs/qiskit_addon_utils.problem_generators.html) module comes to the rescue with a useful function to do this:"
    ]
   },
   {
