--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -1214,7 +1214,7 @@
    "metadata": {},
    "source": [
     "### Step 2: Optimize problem for quantum hardware execution\n",
-    "Let's return to the calculation of the expectation value for a single time point. We'll pick a backend for executing the experiment on hardware"
+    "Let's return to the calculation of the expectation value for a single time point. We'll pick a backend for executing the experiment on hardware."
    ]
   },
   {
@@ -1239,7 +1239,7 @@
    "id": "6eeaac1b",
    "metadata": {},
    "source": [
-    "Then we remove outliers qubits from the coupling map to ensure that the layout stage of the transpiler doesn't include them. Below we use the reported backend properties stored in the `target` object and remove qubits that either have measurement error or a two-qubit gate above a certain threshold (`max_meas_err`, `max_twoq_err`) or $T_2$ time (which determine the loss of coherence) below a certain threshold (`min_t2`)"
+    "Then we remove outlier qubits from the coupling map to ensure that the layout stage of the transpiler doesn't include them. Below we use the reported backend properties stored in the `target` object and remove qubits that either have measurement error or a two-qubit gate above a certain threshold (`max_meas_err`, `max_twoq_err`) or $T_2$ time (which determines the loss of coherence) below a certain threshold (`min_t2`)."
    ]
   },
   {
@@ -1320,7 +1320,7 @@
    "id": "2aba48dd",
    "metadata": {},
    "source": [
-    "We want to set `max_meas_err`,  `min_t2` and `max_twoq_err` such that we find a large enough subset of qubits that supports the circuit to run. In our case it's enough to find a 10-qubits 1D chain"
+    "We want to set `max_meas_err`,  `min_t2`, and `max_twoq_err` such that we find a large enough subset of qubits that supports the circuit to run. In our case it's enough to find a 10-qubit 1D chain."
    ]
   },
   {
@@ -1349,7 +1349,7 @@
    "id": "4d11a75a",
    "metadata": {},
    "source": [
-    "We can then map the circuit and observable onto physical qubits of the device"
+    "We can then map the circuit and observable onto physical qubits of the device."
    ]
   },
   {
