--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -2135,7 +2135,7 @@
    "id": "ffd915d7",
    "metadata": {},
    "source": [
-    "### Construct Trotter circuit with comparable Trotter error to MPF"
+    "#### Construct Trotter circuit with comparable Trotter error to MPF"
    ]
   },
   {
